Performance: Added setters to ElevenLabsBackend and getBackend() to FastTTS for object reuse